# ads-grafana-toolkit

./: .gitignore  14-DAY-SURVIVAL-GUIDE.md  Dockerfile  Dockerfile.test  README  README.md  TESTING.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml  test-toolkit.sh
ads_grafana_toolkit/: __init__.py
ads_grafana_toolkit/alerts/: __init__.py  cloud_rules.py  isp_rules.py  network_rules.py  rules.py
ads_grafana_toolkit/cli/: __init__.py  main.py  wizard.py
ads_grafana_toolkit/nlp_interface/: __init__.py  generator.py
ads_grafana_toolkit/recording_rules/: __init__.py  generator.py
ads_grafana_toolkit/sdk/: __init__.py  dashboard.py  datasource.py  panel.py  row.py
ads_grafana_toolkit/simple/: __init__.py  converter.py
ads_grafana_toolkit/template_library/: __init__.py  base.py  registry.py
ads_grafana_toolkit/topology/: __init__.py  generator.py
ads_grafana_toolkit/web/: __init__.py  app.py  database.py
auto-infra/: DEPLOYMENT.md  DEPLOYMENT_STATUS.md  README.md  SUMMARY.md  build-all.sh
auto-infra/deploy/: deploy-capacity-monitor.sh  deploy.py
auto-infra/monitoring/: README.md  grafana-dashboard-auto-scaling.json  prometheus-capacity-scrape.yml
auto-infra/n8n-workflows/: auto-scale-workflow.json  hostscience-provisioning.json
examples/: sdk_example.py  server-monitoring.yaml
extras/: README.md  extras_setup.py  jsonnet_support.py  promql_builder.py  writers_toolkit.py
setup/: CHEATSHEET.md  FEATURES.md  QUICKSTART.md  README.md  grafana_setup.py
setup/config/: setup_config.yaml
setup/scripts/: _grafana_client.py  audit_monitoring_stack.py  dashboard_diff.py  detect_grafana.py  gen_alertmanager.py  (+13 more)
test/: prometheus.yml
workers/: package.json  schema.sql  tsconfig.json  wrangler.toml
(+33 files in other folders)
